# rust-learning

samplecli/: Cargo.toml
samplecli/src/: main.rs
todo/: Cargo.toml
todo/src/: main.rs
todo/template/: index.html
